# job-market-intelligence-platform

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
apps/api/: docker-compose.yml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 42df6bb80fa5_add_skills_and_job_snapshot_skills.py  ab47d48a138d_create_core_tables.py
apps/api/jmip_api/: main.py
apps/api/jmip_api/core/: config.py  db.py  dependencies.py  errors.py  models.py
apps/api/jmip_api/routers/: health_db.py  version.py
docs/: api_contracts.md  architecture.md  data_model.md  requirements.md  ui_spec.md
tests/api/: test_health.py  test_health_db_down.py  test_health_db_up.py
