[project]
name = "jmip"
version = "0.1.0"
description = "Job Market Intelligence Platform (JMIP)"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["apps/web", "node_modules", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"